Added IQM csv exports

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ uvicorn[standard]>=0.17
 
 # Requests for making HTTP calls
 requests>=2.25
-
+beautifulsoup4
+pandas
 # dcm2bids installed from GitHub (adjust the version/tag as needed)
 dcm2bids @ git+https://github.com/UNFmontreal/Dcm2Bids.git@3.2.0#egg=dcm2bids
