--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,8 @@ uvicorn[standard]>=0.17
 requests>=2.25
 beautifulsoup4
 pandas
+numpy
+nibabel
+pydicom
 # dcm2bids installed from GitHub (adjust the version/tag as needed)
 dcm2bids @ git+https://github.com/UNFmontreal/Dcm2Bids.git@3.2.0#egg=dcm2bids
